# wiremock-demo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  poetry.toml  pyproject.toml  wiremock-demo.postman_collection.json
helpers/: dot_proxy.py  http_helper.py  mocker.py
helpers/api/: wiremock_api.py
tests/: conftest.py  test_stubbing.py
